fix: Disable border-radius of search input on iOS

--- a/assets/sass/common/_element.scss
+++ b/assets/sass/common/_element.scss
@@ -45,6 +45,10 @@ li {
   }
 }
 
+input[type="search"] {
+  border-radius: 0; // Override iOS style
+}
+
 input[type="checkbox"] {
   ul:has(> li > &),
   ul:has(> li > p > &) {
